gulp settings finished

--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "^12 || ^16"
+    "node": "^13 || ^16"
   },
   "dependencies": {
-    "gulp-version-number": "^0.2.4"
+    "gulp-version-number": "^0.2.4",
+    "npm": "^8.3.2"
   }
 }
