--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
     "gulp-sass": "^5.1.0",
+    "gulp-svgmin": "^4.1.0",
     "gulp-svgstore": "^9.0.0",
     "gulp-webp": "^4.0.1",
     "gulp-webp-html-nosvg": "^1.0.4",
