--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -1,28 +1,43 @@
-name: NodeJS with Gulp
+# название
+name: Project test & build
 
+# целевые события для запуска
+# в данном случае это push и pull_request, в ветку master
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
+# выполняемые действия
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 16.x]
     
+    # запускаются по шагам
+    # name - название шага
+    # в github actions будет выводиться название шага, и процессы
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+        with:
+          persist-credentials: false
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Install 🔧
+        run: npm install
 
-    - name: Build
-      run: |
-        npm install
-        gulp
+      - name: Run Test 🔨
+        run: npm run test
+
+      - name: Build 👷
+        run: npm run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          # в значение GITHUB_TOKEN помещается ссылка на ваш секрет в репозитории
+          # в данном случае его название KEY
+          GITHUB_TOKEN: ${{ secrets.portfolio_key }}
+          BRANCH: gh-pages
+          FOLDER: build
+          CLEAN: true
