--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -1,8 +1,6 @@
 # название
 name: Project test & build
 
-# целевые события для запуска
-# в данном случае это push и pull_request, в ветку master
 on:
   push:
     branches: [ master ]
@@ -30,13 +28,11 @@ jobs:
         run: npm run test
 
       - name: Build 👷
-        run: npm run build
+        run: gulp
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          # в значение GITHUB_TOKEN помещается ссылка на ваш секрет в репозитории
-          # в данном случае его название KEY
           GITHUB_TOKEN: ${{ secrets.portfolio_key }}
           BRANCH: gh-pages
           FOLDER: build
