--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" , \"!source/sass/normalize.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp build",
     "start": "gulp"
   },
   "browserslist": [
