--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -8,13 +8,10 @@ on:
     branches: [ master ]
 
 # выполняемые действия
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
-    # запускаются по шагам
-    # name - название шага
-    # в github actions будет выводиться название шага, и процессы
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
@@ -33,7 +30,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          GITHUB_TOKEN: ${{ secrets.portfolio_key }}
+          GITHUB_TOKEN: ${{ secrets.PORTFOLIO_KEY }}
           BRANCH: gh-pages
           FOLDER: build
           CLEAN: true
