--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,20 @@
-# название
-name: Project test & build
-
-# целевые события для запуска
-# в данном случае это push и pull_request, в ветку master
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-# выполняемые действия
+name: Build and Deploy
+on: [push]
 jobs:
   build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
-    
-    # запускаются по шагам
-    # name - название шага
-    # в github actions будет выводиться название шага, и процессы
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
+        uses: actions/checkout@v2
 
-      - name: Install 🔧
-        run: npm install
-
-      - name: Run Test 🔨
-        run: npm run test
-
-      - name: Build 👷
-        run: npm run build
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          npm ci
+          npm run build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@v4.2.2
         with:
-          GITHUB_TOKEN: ${{ secrets.BUILD }}
-          BRANCH: gh-pages
-          FOLDER: build
-          CLEAN: true
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
