start slider from json file

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 .DS_Store
 .idea
-.vscode
 *.ai
 *.log
 *.pdf
 *.psd
 *.sublime*
-node_modules/
-npm-debug.*
-source/css/*.css
-source/css/*.map
 build/
-img/preview
+dist/
+node_modules/
+npm-debug.log*
 Thumbs.db
+.vscode/
