--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "author": "Yana Rozova",
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "main": "gulpfile.js",
-  "type": "module",
+  "description": "portfolio",
+  "main": "webpack.config.js",
+  "author": "Yana Rozova",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ChipRose/Portfolio/issues"
+  },
+  "homepage": "https://github.com/ChipRose/Portfolio#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ChipRose/Portfolio.git"
+  },
   "devDependencies": {
+    "@babel/core": "7.17.5",
+    "@babel/preset-env": "7.16.11",
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "browser-sync": "^2.27.7",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-file-include": "^2.3.0",
-    "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-imagemin": "^8.0.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-notify": "^4.0.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.3",
-    "gulp-sass": "^5.1.0",
-    "gulp-svgmin": "^4.1.0",
-    "gulp-svgstore": "^9.0.0",
-    "gulp-webp": "^4.0.1",
-    "gulp-webp-html-nosvg": "^1.0.4",
-    "gulp-webpcss": "^1.1.1",
-    "sass": "^1.49.0",
+    "autoprefixer": "10.4.2",
+    "babel-loader": "8.2.3",
+    "browser-sync": "2.26.14",
+    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "10.2.4",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.1",
+    "css-minimizer-webpack-plugin": "3.4.1",
+    "eslint": "7.18.0",
+    "eslint-config-htmlacademy": "2.0.0",
+    "file-loader": "6.2.0",
+    "html-minimizer-webpack-plugin": "3.5.0",
+    "html-webpack-plugin": "5.5.0",
+    "image-minimizer-webpack-plugin": "3.2.3",
+    "imagemin": "8.0.1",
+    "imagemin-gifsicle": "7.0.0",
+    "imagemin-jpegtran": "7.0.0",
+    "imagemin-optipng": "8.0.0",
+    "imagemin-svgo": "10.0.1",
+    "imagemin-webp-webpack-plugin": "3.3.6",
+    "mini-css-extract-plugin": "2.6.0",
+    "normalize.css": "8.0.1",
+    "optimize-css-assets-webpack-plugin": "4.0.0",
+    "sass": "1.49.9",
+    "sass-loader": "12.6.0",
     "stylelint": "13.12.0",
     "stylelint-config-htmlacademy": "0.1.4",
-    "swiper": "^7.4.1",
-    "webp-converter": "^2.2.3",
-    "webpack": "^5.67.0",
-    "webpack-stream": "^7.0.0"
+    "terser-webpack-plugin": "5.3.1",
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4"
   },
-  "scripts": {
-    "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/sass/**/*.scss\" , \"!source/sass/normalize.scss\" --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp build",
-    "start": "gulp"
-  },
-  "browserslist": [
-    "last 2 versions",
-    "not dead",
-    "not ie <= 11"
-  ],
   "editorconfig-cli": [
     "*.json",
     "*.js",
@@ -55,11 +57,18 @@
     "source/img/**/*.svg",
     "source/sass/**/*.scss"
   ],
+  "scripts": {
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint \"source/sass/**/*.scss\"",
+    "eslint": "eslint \"source/**/*.js\"",
+    "test": "npm run editorconfig && npm run stylelint && npm run eslint",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "start": "cross-env NODE_ENV=development webpack serve --mode development"
+  },
   "engines": {
-    "node": "^12 || ^16"
+    "node": "12.0.0"
   },
   "dependencies": {
-    "gulp-version-number": "^0.2.4",
-    "npm": "^8.3.2"
+    "swiper": "8.0.7"
   }
 }
