--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "imagemin-svgo": "10.0.1",
     "imagemin-webp-webpack-plugin": "3.3.6",
     "mini-css-extract-plugin": "2.6.0",
-    "normalize.css": "8.0.1",
     "sass": "1.49.9",
     "sass-loader": "12.6.0",
     "stylelint": "13.12.0",
@@ -70,6 +69,7 @@
     "node": "12.0.0"
   },
   "dependencies": {
+    "normalize.scss": "0.1.0",
     "swiper": "8.0.7"
   }
 }
